1732591523 | 58 files | M bin/linux64/libnrfserlib_strings.txt,  M bin/linux64/libopenvr_api_strings.txt,  M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient_strings.txt,  M bin/vrclient_x64_strings.txt,  M bin/vrwebhelper/linux64/libopenvr_api_strings.txt,  M bin/vrwebhelper/win64/openvr_api_strings.txt,  M bin/win32/imagetool_strings.txt,  M bin/win32/nrfserlib_strings.txt,  M bin/win32/openvr_api_strings.txt,  M bin/win32/vivelinklib_strings.txt,  M bin/win64/imagetool_strings.txt,  M bin/win64/nrfserlib_strings.txt,  M bin/win64/openvr_api_strings.txt,  M bin/win64/openxr_loader_strings.txt,  M bin/win64/prism_strings.txt,  M bin/win64/vivelinklib_strings.txt,  M bin/win64/vrdesktop_graphics_capture_strings.txt,  M bin/win64/vrdesktop_strings.txt,  M bin/win64/winrtdisplay_strings.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M drivers/gamepad/bin/win32/driver_gamepad_strings.txt,  M drivers/gamepad/bin/win64/driver_gamepad_strings.txt,  M drivers/
https://steamdb.info/patchnotes/16532387/

--- a/content/vrmonitor/translations/vrmonitor_errors_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_english.txt
@@ -1016,6 +1016,11 @@
 "Warning_DismissableWarning_InstallBigscreenBeyondPrompt_Action" "Install"
 "Warning_DismissableWarning_InstallBigscreenBeyondPrompt_ActionURL" "vrmonitor://installdriver/bigscreenbeyond"
 
+"Warning_DismissableWarning_InstallHtcViveHubPrompt_Header" "Install VIVE Hub?"
+"Warning_DismissableWarning_InstallHtcViveHubPrompt_Description" "VIVE Hub is required to run your VIVE equipment with SteamVR."
+"Warning_DismissableWarning_InstallHtcViveHubPrompt_Action" "Install"
+"Warning_DismissableWarning_InstallHtcViveHubPrompt_ActionURL" "vrmonitor://installdriver/vivehub"
+
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header" "Display Connection Trouble"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description" "Your graphics card cannot successfully connect to your HMD display. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b>"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction" "Reset Headset"
